--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
   font-family: 'Poppins', sans-serif;
   background: #121212;
   color: #e0e0e0;
   line-height: 1.6;
-  margin: 0;
-  padding: 0;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -34,17 +34,17 @@ a {
 }
 
 header {
-  padding: 16px 24px;
   background: linear-gradient(135deg, #4b0082 0%, #00bfa5 100%);
+  padding: 16px 24px;
+  position: relative;
+  top: 0;
+  z-index: 1000;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.6);
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
   gap: 12px;
-  position: relative;
-  top: 0;
-  z-index: 1000;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.6);
 }
 
 header .logo {
@@ -54,6 +54,35 @@ header .logo {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   user-select: none;
+}
+
+header nav {
+  flex: 1 1 280px;
+}
+
+header nav input[type="search"],
+nav input {
+  width: 100%;
+  padding: 8px 16px;
+  border-radius: 20px;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  background: rgba(255,255,255,0.2);
+  color: white;
+}
+
+header nav input[type="search"]::placeholder {
+  color: rgba(255,255,255,0.7);
+}
+
+header select {
+  background: rgba(255,255,255,0.2);
+  border: none;
+  padding: 6px 12px;
+  border-radius: 12px;
+  color: #fff;
+  font-size: 14px;
 }
 
 main {
@@ -71,31 +100,33 @@ h1 {
   -webkit-text-fill-color: transparent;
 }
 
-/* Group judul sama: flex agar horizontal */
+.ebook-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  gap: 16px;
+  padding: 0;
+}
+
 .group {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 12px;
   margin-bottom: 20px;
 }
 
 .group-title {
-  width: 100%;
   font-weight: bold;
-  margin-bottom: 8px;
+  margin-bottom: 5px;
 }
 
 .card {
-  background: #1e1e1e;
+  background: rgba(255, 255, 255, 0.06);
   border-radius: 12px;
-  padding: 10px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 8px;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
   cursor: pointer;
-  width: 180px;
+  width: 150px; /* agar tetap konsisten di tampilan flex juga */
   text-align: center;
 }
 
@@ -105,18 +136,19 @@ h1 {
 }
 
 .card img {
-  width: 100%;
-  height: auto;
-  border-radius: 4px;
+  width: 140px;
+  height: 180px;
   object-fit: cover;
+  border-radius: 8px;
   background: #262626;
   box-shadow: 0 4px 8px rgba(0,0,0,0.3);
   margin-bottom: 8px;
 }
 
 .card h2 {
-  font-size: 14px;
-  margin: 5px 0;
+  font-size: 0.9rem;
+  text-align: center;
+  margin: 4px 0;
   color: #00bfa5;
 }
 
@@ -143,11 +175,11 @@ h1 {
 }
 
 .card .rating {
-  color: #ffa726;
+  color: #ffa726; /* orange rating */
 }
 
 .card .views {
-  color: #90caf9;
+  color: #90caf9; /* light blue views */
 }
 
 footer {
@@ -165,25 +197,24 @@ footer a {
 }
 
 #tts-warning {
-  display: none;
+  padding: 10px;
   background: #ff9800;
   color: #000;
-  padding: 10px;
-  text-align: center;
-  font-size: 14px;
+  display: none;
   position: sticky;
   bottom: 0;
   z-index: 1000;
+  font-size: 14px;
 }
 
-/* Responsive tetap */
 @media (max-width: 600px) {
-  .card {
-    width: 140px;
+  .ebook-grid {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 12px;
   }
   .card img {
-    width: 100%;
-    height: auto;
+    width: 120px;
+    height: 160px;
   }
   .card h2 {
     font-size: 0.8rem;
@@ -196,11 +227,23 @@ footer a {
   }
 }
 
-@media (min-width: 768px) {
-  .card {
-    width: 200px;
+@media (max-width: 400px) {
+  .card .rating, .card .views {
+    font-size: 0.8rem;
   }
 }
+
+@media (min-width: 768px) {
+  .ebook-grid {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
+  }
+  .card img {
+    width: 180px;
+    height: 240px;
+  }
+}
+
 
   </style>
 </head>
