--- a/index.html
+++ b/index.html
@@ -9,242 +9,147 @@
   <meta name="keywords" content="ebook, cerita fantasi, cerita roman, hiburan cerita, koleksi cerita, perpustakaan digital, cerita online, buku gratis, bacaan online, cerita anak, cerita petualangan, novel digital" />
   <meta name="author" content="Perpustakaan Digital" />
   <meta name="robots" content="index, follow" />
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+
   <style>
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Poppins', sans-serif;
-  background: #121212;
-  color: #e0e0e0;
-  line-height: 1.6;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-header {
-  background: linear-gradient(135deg, #4b0082 0%, #00bfa5 100%);
-  padding: 16px 24px;
-  position: relative;
-  top: 0;
-  z-index: 1000;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.6);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 12px;
-}
-
-header .logo {
-  font-weight: 900;
-  font-size: 28px;
-  background: linear-gradient(135deg, #e040fb, #00bfa5);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  user-select: none;
-}
-
-header nav {
-  flex: 1 1 280px;
-}
-
-header nav input[type="search"],
-nav input {
-  width: 100%;
-  padding: 8px 16px;
-  border-radius: 20px;
-  border: none;
-  outline: none;
-  font-size: 16px;
-  background: rgba(255,255,255,0.2);
-  color: white;
-}
-
-header nav input[type="search"]::placeholder {
-  color: rgba(255,255,255,0.7);
-}
-
-header select {
-  background: rgba(255,255,255,0.2);
-  border: none;
-  padding: 6px 12px;
-  border-radius: 12px;
-  color: #fff;
-  font-size: 14px;
-}
-
-main {
-  padding: 32px 16px;
-  flex: 1;
-}
-
-h1 {
-  font-size: 2.5rem;
-  font-weight: 900;
-  margin-bottom: 32px;
-  text-align: center;
-  background: linear-gradient(135deg, #e040fb, #00bfa5);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.ebook-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-  gap: 16px;
-  padding: 0;
-}
-
-.group {
-  margin-bottom: 20px;
-}
-
-.group-title {
-  font-weight: bold;
-  margin-bottom: 5px;
-}
-
-.card {
-  background: rgba(255, 255, 255, 0.06);
-  border-radius: 12px;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 8px;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-  cursor: pointer;
-  width: 150px; /* agar tetap konsisten di tampilan flex juga */
-  text-align: center;
-}
-
-.card:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 8px 24px rgba(0,191,165,0.5);
-}
-
-.card img {
-  width: 140px;
-  height: 180px;
-  object-fit: cover;
-  border-radius: 8px;
-  background: #262626;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-  margin-bottom: 8px;
-}
-
-.card h2 {
-  font-size: 0.9rem;
-  text-align: center;
-  margin: 4px 0;
-  color: #00bfa5;
-}
-
-.card .author {
-  font-size: 0.75rem;
-  color: #b0bec5;
-  text-align: center;
-  margin-bottom: 4px;
-}
-
-.card .category {
-  font-size: 0.7rem;
-  background: rgba(0,191,165,0.2);
-  color: #00bfa5;
-  padding: 2px 6px;
-  border-radius: 12px;
-  text-align: center;
-}
-
-.card .rating, .card .views {
-  font-size: 0.7rem;
-  text-align: center;
-  margin: 2px 0;
-}
-
-.card .rating {
-  color: #ffa726; /* orange rating */
-}
-
-.card .views {
-  color: #90caf9; /* light blue views */
-}
-
-footer {
-  background: #1a1a1a;
-  color: #606060;
-  padding: 24px 16px;
-  text-align: center;
-  flex-shrink: 0;
-  font-size: 12px;
-}
-
-footer a {
-  color: #00bfa5;
-  margin: 0 10px;
-}
-
-#tts-warning {
-  padding: 10px;
-  background: #ff9800;
-  color: #000;
-  display: none;
-  position: sticky;
-  bottom: 0;
-  z-index: 1000;
-  font-size: 14px;
-}
-
-@media (max-width: 600px) {
-  .ebook-grid {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 12px;
-  }
-  .card img {
-    width: 120px;
-    height: 160px;
-  }
-  .card h2 {
-    font-size: 0.8rem;
-  }
-  .card .author {
-    font-size: 0.7rem;
-  }
-  .card .category {
-    font-size: 0.65rem;
-  }
-}
-
-@media (max-width: 400px) {
-  .card .rating, .card .views {
-    font-size: 0.8rem;
-  }
-}
-
-@media (min-width: 768px) {
-  .ebook-grid {
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 20px;
-  }
-  .card img {
-    width: 180px;
-    height: 240px;
-  }
-}
-
-
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: #121212;
+      color: #e0e0e0;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+    header {
+      background: linear-gradient(135deg, #4b0082, #00bfa5);
+      padding: 16px 24px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 12px;
+    }
+    header .logo {
+      font-weight: 900;
+      font-size: 28px;
+      background: linear-gradient(135deg, #e040fb, #00bfa5);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    header nav {
+      flex: 1 1 280px;
+    }
+    header nav input {
+      width: 100%;
+      padding: 8px 16px;
+      border-radius: 20px;
+      border: none;
+      background: rgba(255,255,255,0.2);
+      color: #fff;
+      font-size: 16px;
+    }
+    header nav input::placeholder {
+      color: rgba(255,255,255,0.7);
+    }
+    header select {
+      background: rgba(255,255,255,0.2);
+      border: none;
+      padding: 6px 12px;
+      border-radius: 12px;
+      color: #fff;
+      font-size: 14px;
+    }
+    main {
+      padding: 24px 16px;
+      flex: 1;
+    }
+    h1 {
+      font-size: 2rem;
+      text-align: center;
+      margin-bottom: 24px;
+      background: linear-gradient(135deg, #e040fb, #00bfa5);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    .group {
+      margin-bottom: 24px;
+    }
+    .group-title {
+      font-weight: bold;
+      margin-bottom: 8px;
+      font-size: 1.2rem;
+      color: #00bfa5;
+    }
+    .group-grid {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px;
+    }
+    .card {
+      background: rgba(255,255,255,0.06);
+      border-radius: 12px;
+      padding: 8px;
+      width: 180px;
+      text-align: center;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      cursor: pointer;
+    }
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 8px 24px rgba(0,191,165,0.5);
+    }
+    .card img {
+      width: 180px;
+      height: 240px;
+      object-fit: cover;
+      border-radius: 8px;
+      background: #262626;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      margin-bottom: 8px;
+    }
+    .card h2 {
+      font-size: 0.9rem;
+      margin: 4px 0;
+      color: #00bfa5;
+    }
+    .card .genre {
+      font-size: 0.75rem;
+      margin-bottom: 4px;
+    }
+    .card .rating {
+      font-size: 0.7rem;
+      color: #ffa726;
+    }
+    .card .views {
+      font-size: 0.7rem;
+      color: #90caf9;
+    }
+    footer {
+      background: #1a1a1a;
+      color: #606060;
+      text-align: center;
+      padding: 16px;
+      font-size: 12px;
+    }
+    footer a {
+      color: #00bfa5;
+      margin: 0 6px;
+    }
+    #tts-warning {
+      display: none;
+      background: #ff9800;
+      color: #000;
+      padding: 10px;
+      text-align: center;
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
@@ -259,7 +164,7 @@ footer a {
 
   <main>
     <h1 id="main-title">Koleksi Cerita</h1>
-    <section class="ebook-grid" id="cerita-grid"></section>
+    <section id="cerita-grid"></section>
   </main>
 
   <footer id="footer-text">
@@ -276,6 +181,8 @@ footer a {
     ⚠️ Untuk suara bahasa Indonesia, aktifkan TTS Indonesia di <strong>Pengaturan > Bahasa & masukan > Keluaran Teks ke Suara</strong>
   </div>
 
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyDeiLybtGc6evATj5O7M1FiJd1GPYd-rYc",
@@ -332,18 +239,16 @@ footer a {
         wrapper.className = 'group';
         wrapper.innerHTML = `<div class="group-title">${kata}</div>`;
         const groupGrid = document.createElement('div');
-        groupGrid.style.display = 'flex';
-        groupGrid.style.flexWrap = 'wrap';
-        groupGrid.style.gap = '10px';
+        groupGrid.className = 'group-grid';
         groups[kata].forEach(cerita => {
           const card = document.createElement('div');
           card.className = 'card';
           card.innerHTML = `
             <img src="${cerita.gambar || ''}" alt="Cover ${cerita.judul}">
             <h2>${cerita.judul}</h2>
-            <div>${cerita.genre}</div>
-            <div>⭐ ${cerita.rating || '0.0'}</div>
-            <div>👁 ${cerita.views || 0} ${currentLang === 'id' ? 'dilihat' : 'views'}</div>
+            <div class="genre">${cerita.genre}</div>
+            <div class="rating">⭐ ${cerita.rating || '0.0'}</div>
+            <div class="views">👁 ${cerita.views || 0} ${currentLang === 'id' ? 'dilihat' : 'views'}</div>
             <div><a href="story.html?id=${cerita.key}">${texts[currentLang].read}</a></div>
           `;
           card.onclick = () => {
