--- a/index.html
+++ b/index.html
@@ -9,148 +9,158 @@
   <meta name="keywords" content="ebook, cerita fantasi, cerita roman, hiburan cerita, koleksi cerita, perpustakaan digital, cerita online, buku gratis, bacaan online, cerita anak, cerita petualangan, novel digital" />
   <meta name="author" content="Perpustakaan Digital" />
   <meta name="robots" content="index, follow" />
+<style>
+ *, *::before, *::after {
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  background: #121212;
+  color: #e0e0e0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+header {
+  background: linear-gradient(135deg, #4b0082, #00bfa5);
+  padding: 16px 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+header .logo {
+  font-weight: 900;
+  font-size: 28px;
+  background: linear-gradient(135deg, #e040fb, #00bfa5);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+header nav {
+  flex: 1 1 280px;
+}
+header nav input {
+  width: 100%;
+  padding: 8px 16px;
+  border-radius: 20px;
+  border: none;
+  background: rgba(255,255,255,0.2);
+  color: #fff;
+  font-size: 16px;
+}
+header nav input::placeholder {
+  color: rgba(255,255,255,0.7);
+}
+header select {
+  background: rgba(255,255,255,0.2);
+  border: none;
+  padding: 6px 12px;
+  border-radius: 12px;
+  color: #fff;
+  font-size: 14px;
+}
+main {
+  padding: 24px 16px;
+  flex: 1;
+}
+h1 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 24px;
+  background: linear-gradient(135deg, #e040fb, #00bfa5);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.group {
+  margin-bottom: 24px;
+}
+.group-title {
+  font-weight: bold;
+  margin-bottom: 8px;
+  font-size: 1.2rem;
+  color: #00bfa5;
+}
+.group-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+  justify-content: center;
+}
+.card {
+  background: rgba(255,255,255,0.06);
+  border-radius: 12px;
+  padding: 8px;
+  flex: 1 1 calc(50% - 12px); /* Dua card horizontal */
+  max-width: calc(50% - 12px);
+  text-align: center;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  cursor: pointer;
+}
+.card:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 8px 24px rgba(0,191,165,0.5);
+}
+.card img {
+  width: 100%;
+  height: auto;
+  aspect-ratio: 3/4; /* jaga proporsi gambar */
+  object-fit: cover;
+  border-radius: 8px;
+  background: #262626;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  margin-bottom: 8px;
+}
+.card h2 {
+  font-size: 0.9rem;
+  margin: 4px 0;
+  color: #00bfa5;
+}
+.card .genre {
+  font-size: 0.75rem;
+  margin-bottom: 4px;
+}
+.card .rating {
+  font-size: 0.7rem;
+  color: #ffa726;
+}
+.card .views {
+  font-size: 0.7rem;
+  color: #90caf9;
+}
+footer {
+  background: #1a1a1a;
+  color: #606060;
+  text-align: center;
+  padding: 16px;
+  font-size: 12px;
+}
+footer a {
+  color: #00bfa5;
+  margin: 0 6px;
+}
+#tts-warning {
+  display: none;
+  background: #ff9800;
+  color: #000;
+  padding: 10px;
+  text-align: center;
+  font-size: 14px;
+}
 
-  <style>
-    *, *::before, *::after {
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: #121212;
-      color: #e0e0e0;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-    a {
-      color: inherit;
-      text-decoration: none;
-    }
-    header {
-      background: linear-gradient(135deg, #4b0082, #00bfa5);
-      padding: 16px 24px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 12px;
-    }
-    header .logo {
-      font-weight: 900;
-      font-size: 28px;
-      background: linear-gradient(135deg, #e040fb, #00bfa5);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-    header nav {
-      flex: 1 1 280px;
-    }
-    header nav input {
-      width: 100%;
-      padding: 8px 16px;
-      border-radius: 20px;
-      border: none;
-      background: rgba(255,255,255,0.2);
-      color: #fff;
-      font-size: 16px;
-    }
-    header nav input::placeholder {
-      color: rgba(255,255,255,0.7);
-    }
-    header select {
-      background: rgba(255,255,255,0.2);
-      border: none;
-      padding: 6px 12px;
-      border-radius: 12px;
-      color: #fff;
-      font-size: 14px;
-    }
-    main {
-      padding: 24px 16px;
-      flex: 1;
-    }
-    h1 {
-      font-size: 2rem;
-      text-align: center;
-      margin-bottom: 24px;
-      background: linear-gradient(135deg, #e040fb, #00bfa5);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-    .group {
-      margin-bottom: 24px;
-    }
-    .group-title {
-      font-weight: bold;
-      margin-bottom: 8px;
-      font-size: 1.2rem;
-      color: #00bfa5;
-    }
-    .group-grid {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 12px;
-    }
-    .card {
-      background: rgba(255,255,255,0.06);
-      border-radius: 12px;
-      padding: 8px;
-      width: 180px;
-      text-align: center;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-      cursor: pointer;
-    }
-    .card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 8px 24px rgba(0,191,165,0.5);
-    }
-    .card img {
-      width: 180px;
-      height: 240px;
-      object-fit: cover;
-      border-radius: 8px;
-      background: #262626;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-      margin-bottom: 8px;
-    }
-    .card h2 {
-      font-size: 0.9rem;
-      margin: 4px 0;
-      color: #00bfa5;
-    }
-    .card .genre {
-      font-size: 0.75rem;
-      margin-bottom: 4px;
-    }
-    .card .rating {
-      font-size: 0.7rem;
-      color: #ffa726;
-    }
-    .card .views {
-      font-size: 0.7rem;
-      color: #90caf9;
-    }
-    footer {
-      background: #1a1a1a;
-      color: #606060;
-      text-align: center;
-      padding: 16px;
-      font-size: 12px;
-    }
-    footer a {
-      color: #00bfa5;
-      margin: 0 6px;
-    }
-    #tts-warning {
-      display: none;
-      background: #ff9800;
-      color: #000;
-      padding: 10px;
-      text-align: center;
-      font-size: 14px;
-    }
-  </style>
+/* Agar di tablet/desktop tetap rapi */
+@media (min-width: 600px) {
+  .card {
+    flex: 1 1 calc(25% - 12px);
+    max-width: calc(25% - 12px);
+  }
+}
+</style>
 </head>
 <body>
   <header>
