--- a/about.html
+++ b/about.html
@@ -16,6 +16,8 @@
       menyalurkan bakat menulis dan menggandeng teman-teman yang memiliki potensi dalam dunia literasi, khususnya dalam genre fantasi.
       AMDF.Group menjadi tempat berkumpulnya para kreator muda untuk berbagi ide, cerita, dan inspirasi agar dapat dinikmati masyarakat luas.
     </p>
+<p>Selamat datang di <strong>ebook.amdf.web.id</strong>, situs yang menyediakan kumpulan informasi dan ulasan ebook legal dari berbagai genre. Kami berkomitmen memberikan referensi bacaan yang bermanfaat, menarik, dan tentunya mendukung distribusi konten yang sah dan resmi.</p>
+<p>Tujuan kami adalah membantu pembaca menemukan ebook berkualitas dan memberikan insight seputar literasi digital. Semua konten kami dibuat untuk tujuan edukasi dan informasi.</p>
     <a class="btn-kembali" href="index.html">⬅ Kembali</a>
   </main>
 </body>
