--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,12 @@
 <main>
   <h2>Kontak Kami</h2>
   <p>
-    Silakan hubungi kami melalui email <a href="mailto:info@amdf.web.id">📧</a> atau melalui media sosial:
+    Silakan hubungi kami melalui email <a href="mailto:info@amdf.web.id">📧info@amdf.web.id</a> atau melalui media sosial:
+
   </p>
   <ul>
-    <li>Instagram: <a href="https://www.instagram.com/ahmad.fahril16/?utm_source=qr#" target="_blank">📷</a></li>
-    <li>WhatsApp: <a href="kunci.html" target="_blank">☎️</a></li>
+    <li>Instagram: <a href="https://www.instagram.com/ahmad.fahril16/?utm_source=qr#" target="_blank">📷ahmad.fahril16</a></li>
+    <li>WhatsApp: <a href="kunci.html" target="_blank">☎️WA</a></li>
   </ul>
     <button type="submit">Kirim Pesan</button>
     <a class="btn-kembali" href="index.html">⬅ Kembali</a>
