--- a/privacy.html
+++ b/privacy.html
@@ -16,6 +16,9 @@
     Dengan mengunjungi situs ini, Anda setuju bahwa informasi umum kunjungan Anda (seperti browser, waktu akses) mungkin dikumpulkan
     oleh pihak ketiga penyedia iklan. Kami tidak menjual atau membagikan data Anda kepada pihak lain tanpa izin Anda.
   </p>
+<p>Kami menghargai privasi pengunjung situs kami. <strong>ebook.amdf.web.id</strong> tidak mengumpulkan data pribadi tanpa izin. Data yang dikumpulkan melalui cookies hanya digunakan untuk keperluan statistik pengunjung dan peningkatan layanan situs.</p>
+<p>Kami bekerja sama dengan pihak ketiga (seperti Google AdSense) yang dapat menggunakan cookies untuk menayangkan iklan yang relevan bagi pengunjung. Anda dapat mengatur preferensi privasi melalui browser Anda.</p>
+<p>Jika ada pertanyaan, silakan hubungi kami melalui halaman <a href="contact.html">☎️Kontak</a>.</p>
       <a class="btn-kembali" href="index.html">⬅ Kembali</a>
 </main>
 </body>
