--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kontak Kami - AMDF.Group</title>
+    <link rel="icon" href="images/FAVVV.png" type="image/png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
