--- a/disclaimer.html
+++ b/disclaimer.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Disclaimer - AMDF.Group</title>
+  <link rel="icon" href="images/FAVVV.png" type="image/png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,6 +17,8 @@
     Konten kami disediakan hanya untuk referensi dan hiburan. Dilarang memperbanyak, menduplikasi, atau memperjualbelikan
     cerita tanpa izin tertulis dari kami. Seluruh konten dilindungi oleh Undang-Undang Hak Cipta.
   </p>
+  <p>Semua informasi di <strong>ebook.amdf.web.id</strong> diterbitkan dengan itikad baik untuk tujuan informasi dan edukasi. Kami tidak menjamin kelengkapan, keandalan, dan keakuratan informasi ini secara penuh.</p>
+<p>Kami hanya memberikan ulasan dan referensi ebook legal. Kami tidak menyediakan atau mendistribusikan file bajakan dalam bentuk apapun. Tautan eksternal yang kami bagikan adalah tanggung jawab masing-masing pemilik situs tersebut.</p>
       <a class="btn-kembali" href="index.html">⬅ Kembali</a>
 </main>
 </body>
