--- a/kunci.html
+++ b/kunci.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Anti Spam</title>
+    <link rel="icon" href="images/FAVVV.png" type="image/png">
     <style>
         body {
             margin: 0;
