--- a/story.html
+++ b/story.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Detail Cerita</title>
+  <link rel="icon" href="images/FAVVV.png" type="image/png">
  <style>
 :root {
   --primary: #ff6b9e;
