--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta name="keywords" content="ebook, cerita fantasi, cerita roman, hiburan cerita, koleksi cerita, perpustakaan digital, cerita online, buku gratis, bacaan online, cerita anak, cerita petualangan, novel digital" />
   <meta name="author" content="Perpustakaan Digital" />
   <meta name="robots" content="index, follow" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6115422527383784"
+    crossorigin="anonymous"></script>
 <style>
  *, *::before, *::after {
   box-sizing: border-box;
