--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <meta name="keywords" content="ebook, cerita fantasi, cerita roman, hiburan cerita, koleksi cerita, perpustakaan digital, cerita online, buku gratis, bacaan online, cerita anak, cerita petualangan, novel digital" />
   <meta name="author" content="Perpustakaan Digital" />
   <meta name="robots" content="index, follow" />
+  <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
   <style>
     *, *::before, *::after {
       box-sizing: border-box;
@@ -240,6 +243,9 @@
   </style>
 </head>
 <body>
+  <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-6115422527383784">
+</amp-auto-ads>
   <header>
     <div class="logo" id="logo-text">Koleksi Cerita</div>
     <nav class="search-container">
